# dictate

./: .gitignore  AGENTS.md  BACKEND_ARCHITECTURE_COMPARISON.md  Cargo.toml  FRONTEND_ARCHITECTURE.md  Justfile  MIGRATION_STATUS.md  OSD_IMPLEMENTATION_COMPLETE.md  PLAN.md  README.md  REFACTORING_PLAN.md  SIMPLIFY_PLAN.md  SINGLE_SOCKET_TEST_RESULTS.md  dictate-signing.pub  fetch_iced_docs.py  opencode.json  package-lock.json  package.json  refactoring_implementation_plan.md
.agents/: ROADMAP.md
.agents/research/: formatting-parity-and-debug-harness.md
.beads/: deletions.jsonl  issues.jsonl
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  release.yml  test-aur.yml  zizmor.yml
bar-rs-reference/: .gitignore  Cargo.toml  README.md  bar-rs  install.sh
bar-rs-reference/default_config/: horizontal.ini  vertical.ini
bar-rs-reference/src/: button.rs  fill.rs  list.rs  main.rs  registry.rs  resolvers.rs  tooltip.rs
bar-rs-reference/wiki/: Home.md  Modules.md  Modules:-Battery.md  Modules:-CPU.md  Modules:-Date-and-Time.md  Modules:-Disk-usage.md  Modules:-Hyprland.md  Modules:-Media.md  Modules:-Memory.md  Modules:-Niri.md  Modules:-Volume.md  Modules:-Wayfire.md  Popups.md
cli/: Cargo.toml
cli/src/: main.rs
cosmic-time-reference/: Cargo.toml
cosmic-time-reference/src/: keyframes.rs
docs/: osd-architecture-exploration.md
docs/plans/: 2025-01-25-backend-simplification-design.md  2025-01-25-backend-simplification-implementation.md  2025-01-26-consolidate-project-dirs.md  2025-11-25-consolidate-to-two-commands.md  2025-11-25-generic-settings-commands.md  2025-11-25-model-transcription-separation-design.md  2025-11-25-settings-simplification.md  2025-11-26-compact-osd-design.md
examples/: insert_input_method.rs  insert_virtual_keyboard.rs  list_wayland_globals.rs
plans/daemon-failure-contract/: 001-infallible-delivery.md  002-worker-error-classification.md  003-download-length-verification.md  004-mic-drop-accounting.md  005-accept-error-backoff.md  README.md
plans/debug-harness/: 001-design-discussion.md  002-structure-outline.md  README.md
plans/formatter-punctuation-compat/: 001-transcribe-cli.md  002-command-punctuation-dedup.md  003-capture-notes.md  003-spoken-command-fixtures.md  README.md
plans/gpui-rewrite-hardening/: 001-rust-ci.md  002-formatter-asr-punctuation.md  003-daemon-resilience.md  004-bounded-recording.md  005-idle-mic-release.md  006-overlay-frame-pacing.md  README.md
plans/product-direction/: 001-clipboard-delivery.md  002-insertion-spike.md  003-settings-foundation.md  004-default-model-parakeet.md  005-overlay-phase-states.md  006-live-partials-spike.md  README.md  spike-insertion-findings.md
src/: app.css  app.html  app.rs  audio.rs  cli.rs  components.rs  control.rs  daemon.rs  delivery.rs  dictation.rs  eval.rs  lib.rs  main.rs  mic.rs  models.rs  overlay.rs  prelude.rs  processing.rs  protocol.rs  server.rs  settings.rs  socket.rs  spectrum.rs  state.rs  text.rs  transcription.rs  transport.rs  ui.rs
src-bak/: main.rs  models.rs  text.rs  ui.rs
src-bak/audio/: detection.rs  recorder.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_json.rs
src-tauri-v2/: Cargo.toml  build.rs
src-tauri-v2/capabilities/: default.json
src-tauri-v2/src/: audio.rs  lib.rs  settings.rs  transcription.rs
src-tauri-v2/src/osd/: app.rs  mod.rs  widgets.rs
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20241124000000_initial_schema.sql
src-tauri/src/: audio.rs  broadcast.rs  cli.rs  commands.rs  conf.rs  db.rs  events.rs  history.rs  lib.rs  models.rs  osd.rs  platform.rs  protocol.rs  recording.rs  state.rs  text.rs  transcription.rs  tray.rs
src-tauri/src/audio/: mod.rs  recorder.rs  recording.rs  spectrum.rs
src-tauri/src/commands/: audio.rs  history.rs  models.rs  recording.rs  settings.rs
src-tauri/src/conf/: operations.rs
src-tauri/src/db/: transcriptions.rs
src-tauri/src/models/: catalog.rs  storage.rs
src-tauri/src/osd/: animation.rs  animation_compat.rs  app.rs  app_v2.rs  backend.rs  buffer.rs  messages.rs  state.rs  subscriptions.rs  theme.rs  timeline.rs  view_helpers.rs  widgets.rs
src-tauri/src/osd/widgets/: animated_spectrum.rs  osd_bar.rs  spectrum.rs  status_dot.rs  timer_display.rs
src-tauri/src/platform/: linux.rs
src-tauri/src/platform/linux/: display.rs  shortcuts.rs  text.rs
src-tauri/src/platform/linux/shortcuts/: fallback.rs  wayland.rs  x11.rs
src-tauri/src/transcription/: engine.rs  models.rs
src-tauri/src/transport/: async_transport.rs  codec.rs  mod.rs
src-tauri/src/ui/: app.rs  mod.rs
src-tauri/src/ui/widgets/: osd_bar.rs
src/audio/: mod.rs  recorder.rs  spectrum.rs
src/components/: panel.rs  waveform.rs
src/debug/: chrome.rs  feeders.rs  mod.rs  registry.rs  stats.rs
src/lib/: utils.ts
src/lib/api/: audio.ts  (+6 more)
src/osd/: app.rs  mod.rs  render.rs  socket.rs  state.rs  wayland.rs  widgets.rs
src/routes/: +layout.svelte  +page.svelte
src/server/: handler.rs
src/transport/: async_transport.rs  codec.rs  mod.rs  sync_transport.rs
src/ui/: animation.rs  app.rs  colors.rs  mod.rs  socket.rs  state.rs  widgets.rs
systemd/: dictate.service
tests/: integration.rs
tests/fixtures/: README.md  manifest.toml
tests/snapshots/: integration__cmu-arctic__arctic_a0001.snap  integration__cmu-arctic__arctic_a0002.snap  integration__cmu-arctic__arctic_a0003.snap  integration__cmu-arctic__arctic_a0004.snap  integration__cmu-arctic__arctic_a0005.snap  integration__ljspeech__LJ001-0001.snap  integration__ljspeech__LJ001-0002.snap  integration__spoken-commands__clip-a.snap  integration__spoken-commands__clip-b.snap  integration__spoken-commands__clip-c.snap
waypomo-reference/: AUTHORS  Cargo.toml  README.md
waypomo-reference/config/: config.kdl  style.css
waypomo-reference/src/: cmdline.rs  config.rs  main.rs  report.rs  time_block.rs  waypomo.rs
waypomo-reference/src/dialogs/: intention_prompt.rs  mod.rs  motivation.rs  reflection.rs
waypomo-reference/src/workers/: mod.rs  subprocess.rs  timer.rs
wob-reference/: meson.build
(+94 files in other folders)
