[package]
name = "dictate"
version = "0.1.0"
edition = "2024"
description = "Lightweight CLI transcription service for Linux"
license-file = "LICENSE"
authors = ["Josh Thomas <josh@joshthomas.dev>"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
directories = "6.0"
flate2 = "1.0"
fs2 = "0.4"
futures = "0.3"
hound = "3.5"
iced = { version = "0.13", features = ["tokio", "advanced"] }
iced_layershell = "0.13"
iced_runtime = "0.13"
indicatif = "0.18"
jiff = "0.2.16"
nix = { version = "0.30", features = ["user", "socket"] }
reqwest = { version = "0.12", features = ["json"] }
rustfft = "6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
transcribe-rs = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
