[package]
name = "dictate"
version = "0.1.0"
description = "Voice-to-text transcription for Linux"
authors = ["Josh Thomas <josh@joshthomas.dev>"]
edition = "2024"

[features]
integration = []

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "50d001fe0a38a1c326711541cca5204b7f19557f", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "50d001fe0a38a1c326711541cca5204b7f19557f", package = "gpui_platform", features = ["wayland"] }

anyhow = "1"
bzip2 = "0.6"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
directories = "6"
futures = "0.3"
hound = "3.5"
rtrb = "0.3"
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-onnx = "1.13"
tar = "0.4"
thiserror = "2"
toml = "0.9"
ureq = "3.3"
wl-clipboard-rs = "0.9"

[dev-dependencies]
insta = "1"
strsim = "0.11"
wayland-client = "0.31"
wayland-protocols-misc = { version = "0.3", features = ["client"] }
xkbcommon = "0.8"

[[test]]
name = "integration"
path = "tests/integration.rs"
required-features = ["integration"]

[profile.dev.package."*"]
opt-level = 2
