[package]
name = "dictate"
version = "0.1.0"
description = "Voice-to-text transcription for Linux"
authors = ["Josh Thomas <josh@joshthomas.dev>"]
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dictate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
bzip2 = "0.6"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.17"
directories = "6.0"
flate2 = "1.1"
fs2 = "0.4"
futures = "0.3"
futures-util = "0.3"
hound = "3.5"
iced = { version = "0.14", features = ["tokio", "advanced"] }
iced_layershell = "0.14"
iced_runtime = "0.14"
jiff = "0.2"
log = "0.4"
nix = { version = "0.31", features = ["user", "socket"] }
notify = "8.2"
reqwest = { version = "0.13", features = ["json", "stream"] }
rustfft = "6.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sherpa-rs = { version = "0.6", features = ["download-binaries"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tar = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2"
tokio = { version = "1.48", features = ["full"] }
tokio-util = { version = "0.7" }
toml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12", features = ["tokio"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
